--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -3,50 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Aangemaakt bedrijf bevestigen</title>
-    <style>
-        img{
-            display: inline-block;
-            height: 50px;
-        }
-        label {
-            font-family: Segoe;
-            display: inline-block;
-            width: 100px;
-            margin: 5px;
-            text-align: left;
-        }
-        button {
-            padding: 5px;
-            margin: 10px;
-            border-left: none;
-            border-right: none;
-            border-top: none;
-            border-bottom-color: #242121;
-            background-color: #37AD49;
-            color: white;
-        }
-        </style>
+    <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+    <link th:href="@{/css/company.css}" href="../static/css/company.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-<a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80px" height="45px"></a>
-<h1>Klopt het allemaal? Controleer de bedrijfsgegevens</h1>
+<nav class="navigation">
+    <ul>
+        <li class= "logo-link">
+            <a id="logo" href="/">
+                <img src="../static/logo-small.png" th:src="@{/logo-small.png}" alt="parque banque"></a></li>
+        <li class="nav-link"><a  href="/uitloggen">Uitloggen</a></li>
+        <li class="nav-link"><a  href="/rekening-overzicht">Rekeningoverzicht</a></li>
 
-<form th:action="@{/nieuw-bedrijf-aanmaken}" method="post" th:object="${companyFormBean}">
-<div align="left">
-    <label for="kvkNr">KvK-nummer</label>
-    <input id="kvkNr" type="text" th:field="${companyFormBean.kvkNr}"/><br>
-    <label for="btwNr">Btw-nummer</label>
-    <input id="btwNr" type="text" readonly th:field="${companyFormBean.btwNr}"/><br>
-    <label for="bedrijfsNaam">Bedrijfsnaam</label>
-    <input id="bedrijfsNaam" type="text" readonly th:field="${companyFormBean.companyName}"/><br>
-    <label for="sector">Sector</label>
-    <input id="sector" type="text" readonly th:field="${sector.name}"/><br><br>
-</div>
+    </ul>
+</nav>
 
-<button type="submit" name="action" value="rekeningOpenen"> Rekening openen</button>
-<button type="submit" name="action" value ="wijzigBedrijfsinformatie"> Bedrijfsgegevens aanpassen</button>
-<button type="submit" name="action" value="annulerenGaNaarRekeningoverzicht" formnovalidate> Annuleren, terug naar rekeningoverzicht</button>
-</form>
+
+
+    <div id="form">
+        <form th:action="@{/nieuw-bedrijf-aanmaken}" method="post" th:object="${companyFormBean}">
+            <h1>Klopt het allemaal? </h1>
+
+            <ul>
+                <li>
+                    <label for="kvkNr">KvK-nummer</label>
+                    <input id="kvkNr" type="text" th:field="${companyFormBean.kvkNr}"/>
+                </li>
+                <li>
+                    <label for="btwNr">Btw-nummer</label>
+                    <input id="btwNr" type="text" readonly th:field="${companyFormBean.btwNr}"/>
+                </li>
+                <li>
+                    <label for="bedrijfsNaam">Bedrijfsnaam</label>
+                    <input id="bedrijfsNaam" type="text" readonly th:field="${companyFormBean.companyName}"/>
+                </li>
+                <li>
+                    <label for="sector">Sector</label>
+                    <input id="sector" type="text" readonly th:field="${sector.name}"/>
+                </li>
+            </ul>
+
+            <button type="submit" name="action" value="rekeningOpenen">Ja! Rekening openen</button>
+            <button type="submit" name="action" value ="wijzigBedrijfsinformatie"> Bijna, aanpassen</button>
+            <button type="submit" name="action" value="annulerenGaNaarRekeningoverzicht" formnovalidate>
+                Annuleren, naar rekeningoverzicht</button>
+
+        </form>
+    </div>
 
 </body>
 </html>
