--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Aangemaakt bedrijf bevestigen</title>
+    <title>Nieuw bedrijf bevestigen - Parque Banque</title>
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <style>
         img{
             display: inline-block;
