--- a/parque_banque_server/src/main/resources/templates/contact.html
+++ b/parque_banque_server/src/main/resources/templates/contact.html
@@ -5,8 +5,9 @@
     <meta name="author" content="Lisa Kemeling">
 
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>Contact</title>
+    <title>Contact - Parque Banque</title>
     <style>
         
         header {
