--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -12,10 +12,11 @@
     rekeningen opent en transacties verricht. Zowel voor uw onderneming als prive.">
     <meta property="og:title" content="Parque Banque">
 
-    <!-- LINK tot stylesheet and fonts -->
+    <!-- LINK to stylesheet, favicon and fonts -->
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
-    <title>Home</title>
+    <title>Parque Banque - Like a walk in the park!</title>
     
     <style>
         header {
