--- a/parque_banque_server/src/main/resources/templates/newbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newbusinessaccount.html
@@ -5,9 +5,10 @@
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link th:href="@{/css/businessaccount.css}" href="../static/css/businessaccount.css" rel="stylesheet">
     <link th:href="@{/css/confirmwindow.css}" href="../static/css/confirmwindow.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script type="text/javascript" src="javascript/confirmwindow.js" defer ></script>
-    <title>Zakelijke rekening openen</title>
+    <title>Zakelijke rekening openen - Parque Banque</title>
 </head>
 <body>
 <!-- navigatie-->
