--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
-        <title>rekeningoverzicht</title>
+        <title>Rekeningoverzicht - Parque Banque</title>
 
         <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
         <link th:href="@{/css/accountview.css}" href="../static/css/accountview.css" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="/javascript/accountview.js" defer></script>
