--- a/parque_banque_server/src/main/resources/templates/createlogin.html
+++ b/parque_banque_server/src/main/resources/templates/createlogin.html
@@ -2,9 +2,10 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Maak account - Parque Banque</title>
+    <title>Account maken - Parque Banque</title>
     <link th:href="@{/css/main.css}" rel="stylesheet">
     <link th:href="@{/css/signup.css}" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script type="text/javascript" src="/javascript/createlogin.js" defer></script>
     <style>
