--- a/parque_banque_server/src/main/resources/templates/employeehome.html
+++ b/parque_banque_server/src/main/resources/templates/employeehome.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
-        <title>Homepagina medewerkers</title>
+        <title>Medewerkers - Parque Banque</title>
 
         <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
         <link th:href="@{/css/employeehome.css}" href="../static/css/employeehome.css" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
     </head>
