--- a/parque_banque_server/src/main/resources/templates/error.html
+++ b/parque_banque_server/src/main/resources/templates/error.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Foutpagina</title>
+    <title>Oeps! - Parque Banque</title>
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
 
     <style>
 
