--- a/parque_banque_server/src/main/resources/templates/mostactivebusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/mostactivebusinessaccounts.html
@@ -2,8 +2,9 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Zakelijke klanten met de meeste transacties</title>
+    <title>Meest actieve zakelijke klanten - Parque Banque</title>
     <link th:href="@{/css/mkbtable.css}" href="../static/css/mkbtable.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
