--- a/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Overzicht bedrijven</title>
+    <title>Statistiek MKB - Parque Banque</title>
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
 </head>
 <body>
 <a href="/uitloggen">Uitloggen</a>
