--- a/parque_banque_server/src/main/resources/templates/selectedaccount.html
+++ b/parque_banque_server/src/main/resources/templates/selectedaccount.html
@@ -2,9 +2,10 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
-        <title>Geselecteerde rekening</title>
+        <title>Mijn rekening - Parque Banque</title>
         <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
         <link th:href="@{/css/accountview.css}" href="../static/css/accountview.css" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
     </head>
