--- a/parque_banque_server/src/main/resources/templates/signup.html
+++ b/parque_banque_server/src/main/resources/templates/signup.html
@@ -5,6 +5,7 @@
     <title>Nieuwe klant - Parque Banque</title>
     <link th:href="@{/css/main.css}" rel="stylesheet">
     <link th:href="@{/css/signup.css}" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script type="text/javascript" src="/javascript/signup.js" defer></script>
 </head>
