--- a/parque_banque_server/src/main/resources/static/css/company.css
+++ b/parque_banque_server/src/main/resources/static/css/company.css
@@ -7,6 +7,9 @@ body {
     margin: 0;
     background-color: lightgray;
 }
+h1{
+    padding-bottom: 40px;
+}
 
 #logo img{
     width: 130px;
@@ -61,6 +64,20 @@ li .field{
     margin: 5px;
     width: 50%;
 }
+
+#sectorField{
+margin-left: 60px;
+    width: 53%;
+    overflow: auto;
+}
+
+#sector{
+    margin-left: 62px;
+    width: 52%;
+    overflow: auto;
+    padding: 2px;
+}
+
 
 button {
     border-radius: 4px;
