Companyformbean bij bestaande rekening rekening toevoegen

--- a/parque_banque_server/src/main/resources/templates/newbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newbusinessaccount.html
@@ -28,7 +28,7 @@
         
         </div>
 
-        <form class="form" id="form" action="#" th:action="@{/open-zakelijke-rekening}" method="post" th:object="${company}">
+        <form class="form" id="form" action="#" th:action="@{/open-zakelijke-rekening}" method="post" th:object="${companyFormBean}">
             <p>Voor welk bedrijf wilt u een rekening openen?</p>
             <div class="form-control">
                 <label for="company">Bedrijfsnaam</label>
