Methode voor ophalen datum aangepast om verwarring te voorkomen.

--- a/parque_banque_server/src/main/resources/templates/selectedaccount.html
+++ b/parque_banque_server/src/main/resources/templates/selectedaccount.html
@@ -23,7 +23,7 @@
         <!-- body -->
         <main class="container">
             <h2>Rekening Details</h2>
-            <h3 class="datetime"><span th:text="${DatumEnTijd}"></span> <span id="clock"></span></h3>
+            <h3 class="datetime"><span th:text="${datum}"></span> <span id="clock"></span></h3>
 
             <div class="accountinfo">
                 <h3 th:if="${isCompany}"><span th:text="${businessName}"></span></h3>
