loguit knoppen personeel werken

--- a/parque_banque_server/src/main/resources/templates/mostactivebusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/mostactivebusinessaccounts.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-<a href="/uitloggen"><button>Uitloggen</button></a>
+<a href="/uitloggen-personeel"><button>Uitloggen</button></a>
 <a href="/personeel-home"><button>Terug</button></a>
 <main>
     <h2>Transacties</h2>
