--- a/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
 </head>
 <body>
-<a href="/uitloggen">Uitloggen</a>
+<a href="/uitloggen-personeel">Uitloggen</a>
 <br>
     <h1>Overzicht bedrijfsrekeningen</h1>
 <form action="/overzicht-bedrijven" method="post" th:object="${richestBusinessCustomers}" >
