--- a/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<a href="/uitloggen"><button>Uitloggen</button></a>
+<a href="/uitloggen-personeel"><button>Uitloggen</button></a>
 <a href="/personeel-home"><button>Terug</button></a>
 
     <main>
