--- a/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<a href="/uitloggen"><button>Uitloggen</button></a>
+<a href="/uitloggen-personeel"><button>Uitloggen</button></a>
 <a href="/personeel-home"><button>Terug</button></a>
 <main>
 <h2>Zakelijke Klanten</h2>
