--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Aangemaakt bedrijf bevestigen</title>
+    <title>Nieuw bedrijf bevestigen - Parque Banque</title>
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link th:href="@{/css/company.css}" href="../static/css/company.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
