--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <script type="text/javascript" src="javascript/confirmwindow.js" defer ></script>
     <link th:href="@{/css/confirmwindow.css}" href="../static/css/confirmwindow.css" rel="stylesheet">
-    <title>Nieuwe Particuliere Rekening Openen</title>
+    <title>Nieuwe particuliere rekening - Parque Banque</title>
     <link th:href="@{/css/newprivateaccount.css}" href="../static/css/newprivateaccount.css" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 </head>
