--- a/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
@@ -5,6 +5,7 @@
     <title>Statistieken particuliere klanten - Parque Banque</title>
     <link th:href="@{/css/mkbtable.css}" href="../static/css/mkbtable.css" rel="stylesheet">
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/park-bench-small.png}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 
@@ -13,7 +14,7 @@
 <nav class="navigation">
     <ul>
         <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
-        <li class="nav-link"><a  href="/uitloggen">Uitloggen</a></li>
+        <li class="nav-link"><a  href="/uitloggen-personeel">Uitloggen</a></li>
         <li class="nav-link"><a href="/personeel-home">Terug</a></li>
     </ul>
 
